--- a/package.json
+++ b/package.json
@@ -10,12 +10,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/async-storage": "^1.9.0",
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/bottom-tabs": "^5.x",
+    "@react-navigation/drawer": "^5.1.1",
+    "@react-navigation/material-bottom-tabs": "^5.1.6",
+    "@react-navigation/native": "^5.0.6",
+    "@react-navigation/stack": "^5.0.6",
+    "axios": "^0.26.1",
+    "babel-plugin-macros": "^3.1.0",
+    "expo": "^44.0.0",
+    "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-animatable": "^1.3.3",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^3.6.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-web": "0.17.1",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
