--- a/package.json
+++ b/package.json
@@ -10,38 +10,39 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/bottom-tabs": "^5.x",
-    "@react-navigation/drawer": "^5.1.1",
-    "@react-navigation/material-bottom-tabs": "^5.1.6",
-    "@react-navigation/native": "^5.0.6",
-    "@react-navigation/stack": "^5.0.6",
+    "@react-navigation/drawer": "^5.x",
+    "@react-navigation/elements": "^1.3.3",
+    "@react-navigation/material-bottom-tabs": "^5.x",
+    "@react-navigation/native": "^5.x",
+    "@react-navigation/stack": "^5.x",
     "@rneui/base": "^4.0.0-rc.1",
     "@rneui/themed": "^4.0.0-rc.1",
     "axios": "^0.26.1",
     "babel-plugin-macros": "^3.1.0",
-    "expo": "^44.0.0",
+    "expo": "^44.0.6",
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.68.0",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-paper": "^3.6.0",
+    "react-native-paper": "^4.12.0",
     "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "^4.2.4",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "^0.17.7",
-    "uuid": "^7.0.3"
+    "react-native-web": "0.17.7",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.17.9",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1"
