--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.6",
-    "@react-navigation/bottom-tabs": "^5.x",
-    "@react-navigation/drawer": "^5.x",
+    "@react-navigation/bottom-tabs": "^6.x",
+    "@react-navigation/drawer": "^6.x",
     "@react-navigation/elements": "^1.3.3",
-    "@react-navigation/material-bottom-tabs": "^5.x",
-    "@react-navigation/native": "^5.x",
-    "@react-navigation/stack": "^5.x",
+    "@react-navigation/material-bottom-tabs": "^6.x",
+    "@react-navigation/native": "^6.x",
+    "@react-navigation/stack": "^6.x",
     "@rneui/base": "^4.0.0-rc.1",
     "@rneui/themed": "^4.0.0-rc.1",
     "axios": "^0.26.1",
     "babel-plugin-macros": "^3.1.0",
-    "expo": "^44.0.6",
+    "expo": "^44.0.0",
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.68.0",
+    "react-native": "0.64.3",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-linear-gradient": "^2.5.6",
@@ -39,7 +38,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
-    "uuid": "^8.3.2"
+    "uuid": "^7.0.3",
+    "yet": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
